--- a/yilifang-manager-service/pom.xml
+++ b/yilifang-manager-service/pom.xml
@@ -75,5 +75,10 @@
 			<artifactId>zkclient</artifactId>
 		</dependency>
 
+
+      <dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper</artifactId>
+		</dependency> 
 	</dependencies>
 </project>
